[package]
authors = ["Albert Moravec <albert.moravec@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "dma-test"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
rtt-target = { version = "0.2.2", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.1", features = ["cortex-m"] }
embedded-hal = "0.2.4"
# stm32f4xx-hal = { version = "0.8.3", features = ["stm32f429", "rt"] }
stm32f4xx-hal = { path = "../stm32f4xx-hal", features = ["stm32f429", "rt", "usb_hs"] }
usb-audio = { path = "../usb-audio" }
usb-device = { path = "../usb-device" }
bbqueue = "0.4.10"

# this lets you use `cargo fix`!
[[bin]]
name = "dma-test"
test = false
bench = false

[profile.dev]
debug = 1 # default is `true`; not needed if not already overridden

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
